# auto-registration

./: main.py  payment.py  payment_example.py  pyproject.toml
