[project]
name = "auto-registration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
    "pyrefly>=0.44.2",
    "ruff>=0.14.8",
]

[tool.pyrefly]
python-version = "3.14"
project-includes = ["*.py"]
untyped-def-behavior = "check-and-infer-return-type"

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "ANN401",  # Allow Any in **kwargs (needed for dynamic dispatch patterns)
]

[tool.ruff.lint.isort]
known-first-party = ["payment"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
